# prompt-better

./: .gitignore  AGENTS.md  LICENSE  PyPI.md  README.md  build.gradle.kts  dspy_predict_debug.py  gradlew  medium.md  mise.toml  pypi-release.sh  pyproject.toml  settings.gradle.kts
.github/workflows/: deploy-pages.yml
AIBridges/: README.md
AIBridges/iOS/: .gitignore  Package.resolved  Package.swift  project.yml
AIBridges/iOS/html/: privacy.html
AIBridges/iOS/iosAIBridge.xcodeproj/: project.pbxproj
AIBridges/macOS/: Package.resolved  Package.swift
contrib/gradle/: README.md  prompt-better.gradle.kts
example/: example.md  example.sh  prompt-better.json
example/prompts/TopicClassifier/: prompt.json
frameworks/AIPromptCore/: Package.swift  build_xcframework.sh
gradle/: libs.versions.toml
prompt_better/: __init__.py  cli.py  config.py  dataset.py  golden_generator.py  json_prompts.py  models.py  openai_structured.py  optimizer.py  prompt-schema.json
prompt_better/dataset_manager/: __init__.py  dataset-schema.json  golden-schema.json  golden_generator.py  loader.py  metrics.py  models.py
prompt_better/dataset_manager/tests/: __init__.py  test_dataset_manager.py
prompt_better/dspy_manager/: __init__.py  evaluator.py  fallbacks.py  models.py  openai_structured.py  optimizer.py  optimizers.py  reporter.py  utils.py
prompt_better/dspy_manager/templates/: prompt_summary.j2
prompt_better/dspy_manager/tests/: __init__.py  test_config.py  test_evaluator.py  test_openai_structured.py  test_optimizers.py  test_reporting.py
prompt_better/prompt_json/: __init__.py  codegen.py  dspy_converter.py  generator.py  loader.py  models.py  prompt-schema.json
prompt_better/templates/: prompt_summary.j2  swift_gen.jinja2
tests/: test_enhancements.py  test_json_prompts.py
(+38 files in other folders)
